--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> lang</pt-br>
+<html lang="pt-br">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -26,6 +26,7 @@
         <li>descontos adicionais</li>
         <li>frete gratis para todo paraná</li>
        </ul>
+       <img class="imagem-beneficios" src="imagem-beneficios.jpg">
     </div>
   </main>
 </body>
